Removed old drivers, added new drivers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,16 +9,16 @@ if(WIN32)
     set(CMAKE_CONFIGURATION_TYPES "Debug" CACHE STRING "Debug" FORCE)
 endif()
 
-add_executable(Warzone_Map src/Map.cpp src/MapDriver.cpp)
-add_executable(Warzone_Player src/Player.cpp src/PlayerDriver.cpp src/Map.cpp src/Orders.cpp src/Cards.cpp)
-add_executable(Warzone_Orders src/Orders.cpp src/OrdersDriver.cpp src/Map.cpp src/Player.cpp src/Cards.cpp)
-add_executable(Warzone_Cards src/Cards.cpp src/CardsDriver.cpp src/Map.cpp src/Player.cpp src/Orders.cpp)
-add_executable(Warzone_Engine src/GameEngine.cpp src/GameEngineDriver.cpp src/Map.cpp src/Player.cpp src/Orders.cpp src/Cards.cpp)
-list(APPEND BIN Warzone_Map)
-list(APPEND BIN Warzone_Player)
-list(APPEND BIN Warzone_Orders)
-list(APPEND BIN Warzone_Cards)
-list(APPEND BIN Warzone_Engine)
+add_executable(Warzone_CommandProcessing src/CommandProcessingDriver.cpp src/CommandProcessing.cpp src/Cards.cpp src/GameEngine.cpp src/LoggingObserver.cpp src/Map.cpp src/Orders.cpp src/Player.cpp)
+add_executable(Warzone_StartupPhase src/StartupPhaseDriver.cpp src/CommandProcessing.cpp src/Cards.cpp src/GameEngine.cpp src/LoggingObserver.cpp src/Map.cpp src/Orders.cpp src/Player.cpp)
+add_executable(Warzone_MainLoop src/MainLoopDriver.cpp src/CommandProcessing.cpp src/Cards.cpp src/GameEngine.cpp src/LoggingObserver.cpp src/Map.cpp src/Orders.cpp src/Player.cpp)
+add_executable(Warzone_OrderExecution src/OrderExecutionDriver.cpp src/CommandProcessing.cpp src/Cards.cpp src/GameEngine.cpp src/LoggingObserver.cpp src/Map.cpp src/Orders.cpp src/Player.cpp)
+add_executable(Warzone_LoggingObserver src/LoggingObserverDriver.cpp src/CommandProcessing.cpp src/Cards.cpp src/GameEngine.cpp src/LoggingObserver.cpp src/Map.cpp src/Orders.cpp src/Player.cpp)
+list(APPEND BIN Warzone_CommandProcessing)
+list(APPEND BIN Warzone_StartupPhase)
+list(APPEND BIN Warzone_MainLoop)
+list(APPEND BIN Warzone_OrderExecution)
+list(APPEND BIN Warzone_LoggingObserver)
 
 install(TARGETS ${BIN} DESTINATION ${CMAKE_INSTALL_PREFIX})
 
