--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,16 +9,10 @@ if(WIN32)
     set(CMAKE_CONFIGURATION_TYPES "Debug" CACHE STRING "Debug" FORCE)
 endif()
 
-add_executable(Warzone_CommandProcessing src/CommandProcessingDriver.cpp src/CommandProcessing.cpp src/Cards.cpp src/GameEngine.cpp src/LoggingObserver.cpp src/Map.cpp src/Orders.cpp src/Player.cpp)
-add_executable(Warzone_StartupPhase src/StartupPhaseDriver.cpp src/CommandProcessing.cpp src/Cards.cpp src/GameEngine.cpp src/LoggingObserver.cpp src/Map.cpp src/Orders.cpp src/Player.cpp)
-add_executable(Warzone_MainLoop src/MainLoopDriver.cpp src/CommandProcessing.cpp src/Cards.cpp src/GameEngine.cpp src/LoggingObserver.cpp src/Map.cpp src/Orders.cpp src/Player.cpp)
-add_executable(Warzone_OrderExecution src/OrderExecutionDriver.cpp src/CommandProcessing.cpp src/Cards.cpp src/GameEngine.cpp src/LoggingObserver.cpp src/Map.cpp src/Orders.cpp src/Player.cpp)
-add_executable(Warzone_LoggingObserver src/LoggingObserverDriver.cpp src/CommandProcessing.cpp src/Cards.cpp src/GameEngine.cpp src/LoggingObserver.cpp src/Map.cpp src/Orders.cpp src/Player.cpp)
-list(APPEND BIN Warzone_CommandProcessing)
-list(APPEND BIN Warzone_StartupPhase)
-list(APPEND BIN Warzone_MainLoop)
-list(APPEND BIN Warzone_OrderExecution)
-list(APPEND BIN Warzone_LoggingObserver)
+add_executable(Warzone_PlayerStrategies src/CommandProcessing.cpp src/Cards.cpp src/GameEngine.cpp src/LoggingObserver.cpp src/Map.cpp src/Orders.cpp src/Player.cpp src/PlayerStrategies.cpp src/PlayerStrategiesDriver.cpp)
+add_executable(Warzone_Tournament src/CommandProcessing.cpp src/Cards.cpp src/GameEngine.cpp src/LoggingObserver.cpp src/Map.cpp src/Orders.cpp src/Player.cpp src/PlayerStrategies.cpp src/TournamentDriver.cpp)
+list(APPEND BIN Warzone_PlayerStrategies)
+list(APPEND BIN Warzone_Tournament)
 
 install(TARGETS ${BIN} DESTINATION ${CMAKE_INSTALL_PREFIX})
 
